uftrace (0.9.3-1) UNRELEASED; urgency=low

  * New upstream release
  * Bump Standards-Version to 4.4.0

 -- paul cannon <pik@debian.org>  Wed, 18 Sep 2019 21:14:16 -0500

uftrace (0.9.0-1) unstable; urgency=medium

  * New upstream release:
    + Fixes FTBFS on buster/sid (closes: #906512).
    + Now reports correct version (closes: #886863).
  * Adds arm64 as a build target (closes: #898000, and thank you, Matthias
    Klose).
  * Add new (optional) build dependencies for the sake of features:
    pkg-config, libpython2.7-dev, libdw-dev, libncursesw5-dev
  * Bump Standards-Version to 4.2.1.

 -- paul cannon <pik@debian.org>  Tue, 11 Sep 2018 16:19:19 -0500

uftrace (0.8.2-1) unstable; urgency=low

  * New upstream release

 -- paul cannon <pik@debian.org>  Fri, 05 Jan 2018 13:23:39 -0600

uftrace (0.7.0-1) unstable; urgency=low

  * New upstream release (closes: #871596).
  * Add patch to fix calculation of message sizes under send_trace_metadata

 -- paul cannon <pik@debian.org>  Wed, 09 Aug 2017 12:08:47 -0500

uftrace (0.6.2-2) unstable; urgency=low

  * Don't claim to build on armel; the vstr instructions used in the
    ARM port for this software are not available under armel
    (closes: #858554). Thanks to Adrian Bunk.

 -- paul cannon <pik@debian.org>  Thu, 23 Mar 2017 10:18:14 -0500

uftrace (0.6.2-1) unstable; urgency=low

  * New upstream release
  * Release strategy has been established; define debian/watch
  * Use pristine-tar

 -- paul cannon <pik@debian.org>  Thu, 16 Mar 2017 12:41:12 -0500

uftrace (0.6.0.20161014-1) unstable; urgency=low

  * Initial packaging of git snapshot at commit 06e6740256 (closes: #839877).

 -- paul cannon <pik@debian.org>  Fri, 14 Oct 2016 10:55:12 -0500