@@ -1,6 +1,7 @@
 uftrace (0.9.3-1) UNRELEASED; urgency=low
 
   * New upstream release
+  * Adds support for nodoc build option
   * Bump Standards-Version to 4.4.0
 
  -- paul cannon <pik@debian.org>  Wed, 18 Sep 2019 21:14:16 -0500
